--- a/customintenttester/src/main/AndroidManifest.xml
+++ b/customintenttester/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+
+        <receiver android:name=".SongReceiver">
+            <intent-filter>
+                <action android:name="us.bojie.intent.action.SHARE_SONG"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
